package ArkhitekturaPO.Practocal.Practical_3.OCP;

class Circle extends Shape {
    public void draw() {
        System.out.println("Рисуем круг");
    }
}
