package ArkhitekturaPO.Practocal.Practical_3.OCP;

class Rectangle extends Shape {
    public void draw() {
        System.out.println("Рисуем прямоугольник");
    }
}
