package ArkhitekturaPO.Practocal.Practical_3.OCP;

abstract class Shape {
    public abstract void draw();
}
